force-app/main/default/objects/Trolley_Batch__c/Trolley_Batch__c.object-meta.xml
<CustomObject>
    <label>Trolley Batch</label>
    <nameField>
        <displayFormat>batch-{000000}</displayFormat>
        <label>Trolley Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trolley Batchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>