force-app/main/default/objects/Trolley_Batch__c/fields/For_Non_Torc_User__c.field-meta.xml
<CustomField>
    <fullName>For_Non_Torc_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Non Torc User</label>
    <type>Checkbox</type>
</CustomField>