force-app/main/default/objects/Trolley_Batch__c/fields/Overall_Total__c.field-meta.xml
<CustomField>
    <fullName>Overall_Total__c</fullName>
    <formula>Total_Amount__c + Total_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>