force-app/main/default/objects/Trolley_Batch__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Trolley_Invoice__c.Amount__c</summarizedField>
    <summaryForeignKey>Trolley_Invoice__c.Trolley_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>