force-app/main/default/objects/Trolley_Batch__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <label>Total Fee</label>
    <summarizedField>Trolley_Invoice__c.Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Trolley_Invoice__c.Cover_Fee__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Trolley_Invoice__c.Trolley_Batch__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>