force-app/main/default/objects/Trolley_Batch__c/fields/Trolley_Link__c.field-meta.xml
<CustomField>
    <fullName>Trolley_Link__c</fullName>
    <formula>HYPERLINK(&apos;https://dashboard.trolley.com/payments/&apos;+ Trolley_Id__c , &apos;Trolley&apos; ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trolley Link</label>
    <type>Text</type>
</CustomField>