force-app/main/default/objects/Trolley_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Trolley_Link__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Fee__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>